--- a/overlay/OPlusSettingsResTarget/res/values/config.xml
+++ b/overlay/OPlusSettingsResTarget/res/values/config.xml
@@ -11,4 +11,7 @@
     <!-- The radius of the enrollment progress bar, in dp -->
     <integer name="config_udfpsEnrollProgressBar" translatable="false">107</integer>
 
+    <!-- UDFPS lottie animation -->
+    <dimen name="udfps_lottie_translate_y">-500dp</dimen>
+
 </resources>
